<resources>
    <string name="app_name">SnorLabs</string>
    <string-array name="settings">
        <item>Select</item>
        <item>Feedback</item>
        <item>Help</item>
    </string-array>

    <string name="help_text">For additional support, please contact: snorlabshelp101@gmail.com</string>
    <string name="back">Back</string>
    <string name="feedback_beta1">Provide Beta feedback to the developer:</string>
    <string name="feedback_beta2">1) Open the Play Store</string>
    <string name="feedback_beta3">2) At the top right, tap the profile icon</string>
    <string name="feedback_beta4">3) Tap Manage apps and devices> Beta</string>
    <string name="feedback_beta5">4) Find SnorLabs Beta and tap the app</string>
    <string name="feedback_beta6">5) Under Private feedback to developer, tap Write feedback</string>
    <string name="feedback_beta7">6) Please provide your feedback </string>
    <string name="feedback_beta8">7) Tap Post </string>
    <string name="feedback_beta9"> Alternatively, please share your experience with snorlabs101@help.com</string>
    <string name="titleTextInitial">Sleep timer set to:  </string>
    <string name="titleTextPause">Timer paused:  </string>
    <string name="titleTextRunning">Sleep Timer Left:  </string>
    <string name="debugStringInitial">Timestamp and sleepscore when available</string>
    <string name="requestPowerModeOff">This app will not work if power saving mode is on. Please turn off to continue using</string>
    <string name="goToSettings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="mainSleepTimer3">Set your dynamic sleep timer</string>
    <string name="mainSleepTimer2">Take control of your sleep</string>
    <string name="mainSleepTitle">Welcome to SnorLabs</string>
    <string name="mainButtonText">Lets go!</string>
    <string name="finishAlarmTitle">Time to wake up</string>
    <string name="finishAlarmText">Well done, you took control of your sleep</string>
    <string name="snoozeButtonText">Snooze</string>
    <string name="finishButton">Finish</string>
    <string name="snoozeTextView">Alarm snoozed 10 minutes</string>
    <string name="snoozeToast">Alarm snoozed 10 minutes</string>
    <string name="debug_sleep_score">\"Sleep score: \"</string>
    <string name="cancelDynamicAlarm">Less than 5 minutes to regular alarm</string>
    <string name="titleTextPaused">\"Sleep Timer Paused: \"</string>
    <string name="debugForegroundService">Error starting foregroundService</string>

</resources>